welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:1: error: reassignment to val
def positionFinale()=Boolean = {
                             ^